--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,17 @@ before_install:
   
 script:
   - docker run -e CI=true muneeza90/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "docker"
+  env: 
+  bucket_name:
+  bucket_path: "docker"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
+      
