--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,12 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "eu-west-1"
-  app: "docker"
+  app: "Docker"
   env: "Docker-env"
   bucket_name: "elasticbeanstalk-eu-west-1-885128580188"
-  bucket_path: "docker"
+  bucket_path: "Docker"
   on:
-    branch: master
+    branch: main
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
       
